# manticore-sphinx-theme

./: .gitignore  LICENSE  Makefile  README.md  build.py  optimize.py  pyproject.toml
.github/workflows/: docs.yaml  docs.yml  publish.yml
docs/: admonitions.rst  api-reference.rst  changelog.rst  code-blocks.rst  conf.py  getting-started.rst  index.rst  special-markup.rst  tables-figures.rst  typography.rst
manticore_sphinx_theme/: __init__.py  layout.html  theme.conf  theme.toml
manticore_sphinx_theme/static/css/: theme.css  theme.min.css
manticore_sphinx_theme/static/js/: theme.js
manticore_sphinx_theme/static/sass/: _admonitions.scss  _base.scss  _code.scss  _content.scss  _dark.scss  _footer.scss  _landing.scss  _layout.scss  _normalize.scss  _responsive.scss  _sidebar.scss  _toc.scss  _variables.scss  theme.scss
theme-docs/: branding.rst  build-system.rst  colours-fonts.rst  conf.py  configuration.rst  dark-mode.rst  deployment.rst  directives-support.rst  index.rst  installation.rst  keyboard-shortcuts.rst  landing-page.rst  optimization.rst  options-reference.rst  quickstart.rst  sass-customisation.rst  sidebar-directive.rst
