[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manticore-sphinx-theme"
version = "1.0.0"
description = "A clean, corporate Sphinx theme based on Bulma/SASS — no NPM required."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Your Organisation" },
]
keywords = ["sphinx", "theme", "bulma", "documentation", "corporate"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "sphinx>=7.0",
]

[project.optional-dependencies]
dev = [
    "libsass>=0.23",
    "sphinx-autobuild",
    "build",
    "twine",
]

[project.entry-points."sphinx.html_themes"]
manticore_sphinx_theme = "manticore_sphinx_theme"

[project.urls]
Homepage   = "https://github.com/yourorg/manticore-sphinx-theme"
Repository = "https://github.com/yourorg/manticore-sphinx-theme"
Issues     = "https://github.com/yourorg/manticore-sphinx-theme/issues"

[tool.setuptools.packages.find]
include = ["manticore_sphinx_theme*"]

[tool.setuptools.package-data]
manticore_sphinx_theme = [
    "theme.toml",
    "theme.conf",
    "*.html",
    "static/css/*.css",
    "static/js/*.js",
    "static/sass/**/*.scss",
]
