[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manticore-sphinx-theme"
version = "1.0.2"
description = "A clean, corporate Sphinx theme based on Bulma/SASS — no NPM required."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "manticore-projects Co. Ltd." },
]
keywords = ["sphinx", "theme", "bulma", "documentation", "corporate"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "sphinx>=7.0",
]

[project.optional-dependencies]
dev = [
    "libsass>=0.23",
    "sphinx-autobuild",
    "build",
    "twine",
]

[project.entry-points."sphinx.html_themes"]
manticore_sphinx_theme = "manticore_sphinx_theme"

[project.urls]
Homepage       = "https://github.com/manticore-projects/manticore-sphinx-theme"
Documentation  = "https://manticore-projects.github.io/manticore-sphinx-theme/"
Repository     = "https://github.com/manticore-projects/manticore-sphinx-theme"
Issues         = "https://github.com/manticore-projects/manticore-sphinx-theme/issues"

[tool.setuptools.packages.find]
include = ["manticore_sphinx_theme*"]

[tool.setuptools.package-data]
manticore_sphinx_theme = [
    "theme.toml",
    "theme.conf",
    "*.html",
    "static/css/*.css",
    "static/js/*.js",
    "static/sass/**/*.scss",
]
